# rss-scraper

./: .gitignore
api/: README.md  api.db  pyproject.toml  test.db
api/api/: cron.py  crud.py  database.py  main.py  models.py  schemas.py  sql_app.db  test.py
api/tests/: test_api.py
todo-client/: .eslintcache  package-lock.json  package.json
todo-client/src/: index.js
todo-client/src/components/: Modal.js
todo-server/: pyproject.toml
todo-server/backend/: db.sqlite3
todo-server/backend/backend/: settings.py  urls.py
todo-server/backend/todo/: admin.py  views.py
todo-server/backend/todo/migrations/: 0001_initial.py
