[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Athul Muralidhar <athul.m68@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.20"
pydantic = "^1.8.2"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
lxml = "^4.6.3"
httpx = "^0.18.2"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
ipdb = "^0.13.9"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
