[tool.poetry]
name = "todo-server"
version = "0.1.0"
description = ""
authors = ["Athul Muralidhar <athul.m68@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
django-cors-headers = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
